setup reverse geocoding

--- a/Example/WebApplication/Pages/Index.cshtml
+++ b/Example/WebApplication/Pages/Index.cshtml
@@ -6,10 +6,11 @@
 
 <div class="text-center">
     <h1 class="display-4">Mapbox.AspNetCore example</h1>
-    <p>Results for query <b>@Model.Query</b>, country @Model.CountryCode, MinRelevance @Model.MinRelevance</p>
+    <p>Geocoding Results for query <b>@Model.Query</b>, country @Model.CountryCode, MinRelevance @Model.MinRelevance</p>
 </div>
 
-@if (Model.MapboxResult != null)
+
+@if (Model.GeocondingResults != null)
 {
     <table class="table">
         <thead>
@@ -23,17 +24,49 @@
         </thead>
 
         <tbody>
-            @foreach (var place in Model.MapboxResult.Places)
+            @foreach (var place in Model.GeocondingResults.Places)
             {
-            <tr>
-                <td>@place.Name</td>
-                <td>@place.Relevance</td>
-                <td>@place.City.Name (@place.City.PostCode)</td>
-                <td>@place.Country.Name</td>
-                <td>@place.Coordinates.Latitude, @place.Coordinates.Longitude</td>
-            </tr>
+                <tr>
+                    <td>@place.Name</td>
+                    <td>@place.Relevance</td>
+                    <td>@place.City.Name (@place.City.PostCode)</td>
+                    <td>@place.Country.Name</td>
+                    <td>@place.Coordinates.Latitude, @place.Coordinates.Longitude</td>
+                </tr>
             }
         </tbody>
 
     </table>
 }
+
+
+<div class="text-center">
+
+    <p>Reverse Geocoding Results for coordinates <b>@Model.Coordinates.Latitude, @Model.Coordinates.Longitude</b></p>
+    @if (Model.ReverseGeocondingResult != null)
+    {
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Place name</th>
+
+                    <th scope="col">City (PostCode)</th>
+                    <th scope="col">Country</th>
+                    <th scope="col">Coordinates</th>
+                </tr>
+            </thead>
+
+            <tbody>
+
+                <tr>
+                    <td>@Model.ReverseGeocondingResult.Place.Name</td>
+                    <td>@Model.ReverseGeocondingResult.Place.City.Name (@Model.ReverseGeocondingResult.Place.City.PostCode)</td>
+                    <td>@Model.ReverseGeocondingResult.Place.Country.Name</td>
+                    <td>@Model.ReverseGeocondingResult.Place.Coordinates.Latitude, @Model.ReverseGeocondingResult.Place.Coordinates.Longitude</td>
+                </tr>
+
+            </tbody>
+
+        </table>
+    }
+</div>
