add support for response text language

--- a/Example/WebApplication/Pages/Index.cshtml
+++ b/Example/WebApplication/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Mapbox.AspNetCore example</h1>
-    <p>Geocoding Results for query <b>@Model.Query</b>, country @Model.CountryCode, MinRelevance @Model.MinRelevance</p>
+    <p>Geocoding Results for query <b>@Model.Query</b>, country @Model.CountryCode, MinRelevance @Model.MinRelevance, Language @Model.Language</p>
 </div>
 
 
